@@ -95,7 +95,33 @@ if test "x$enable_xrpc" != xno; then
 fi
 AM_CONDITIONAL(HAVE_JAVAXRPC,test x$have_java_xrpc != xno)
 
-if test "x${have_java_jdbc}x${have_java_xrpc}" = xnoxno; then
+AC_ARG_ENABLE(merocontrol,
+	AS_HELP_STRING([--enable-merocontrol], [build the Merovingian control driver]),
+	enable_control="$enableval",
+	enable_control=auto)
+case $enable_control in
+	yes|auto) enable_control=$enable_control;;
+	*) enable_control=no;;
+esac
+
+have_java_control=no
+if test "x$enable_control" != xno; then
+	req_java_ver_min=1.4 # >= $req_java_ver_min required
+	unset req_java_ver_max # <  $req_java_ver_max required
+	AM_MONETDB_ANT_JAVA($req_java_ver_min, $req_java_ver_max)
+	if test "x$have_java" = xno; then
+		if test "x$enable_control" = xyes; then
+			AC_MSG_ERROR([Merovingian control requires ant and Java >= $req_java_ver_min.])
+		else
+			AC_MSG_WARN([Cannot build Merovingian control as it requires ant and Java >= $req_java_ver_min.])
+		fi
+	else
+		have_java_control=yes
+	fi
+fi
+AM_CONDITIONAL(HAVE_JAVAMEROCONTROL,test x$have_java_control != xno)
+
+if test "x${have_java_jdbc}x${have_java_xrpc}x${have_java_control}" = xnoxnoxno; then
 	AC_MSG_ERROR([Java and Ant are required to build MonetDB Java.])
 else
 	# Make sure that HAVE_JAVA is TRUE if at least one of HAVE_JAVAJDBC and HAVE_JAVAXRPC is TRUE,
